--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-    "name": "my-website",
-    "version": "1.0.0",
-    "description": "Peanut Butter Pasteurs",
-    "author": "Sam Jage",
-    "devDependencies": {
-        "gulp": "^3.9.1",
-        "gulp-sass": "^2.2.0",
-        "gulp-autoprefixer": "^3.1.0",
-        "sassdoc": "^2.1.20"
-    }
+  "name": "my-website",
+  "version": "1.0.0",
+  "description": "Peanut Butter Pasteurs",
+  "author": "Sam Jage",
+  "devDependencies": {
+    "browser-sync": "^2.11.1",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-sass": "^2.2.0",
+    "sassdoc": "^2.1.20"
+  }
 }
